Provide some default configuration files so fewer are required to start a server.